<resources>
    <string name="app_name">RedditWalls</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_settings">Settings</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="sort_hot">Hot</string>
    <string name="sort_new">New</string>
    <string name="sort_top_all">Top All</string>
    <string name="sort_top_year">Top Year</string>
    <string name="sort_top_month">Top Month</string>
    <string name="sort_top_week">Top Week</string>
    <string name="sort_top_day">Top Day</string>

    <string name="image_description">Image preview</string>
    <string name="retry">RETRY</string>
    <string name="empty_label">There\'s nothing here :(</string>
    <string name="grapple">Grapple</string>
    <string-array name="location_options">
        <item>Home Screen</item>
        <item>Lock Screen</item>
        <item>Both</item>
    </string-array>
    <string-array name="tips">
        <item>\u2022 Long press an image to quickly set the image as your wallpaper</item>
        <item>\u2022 Double tap the image preview to add it to your favorites list</item>
        <item>\u2022 Long press a subreddit card to show extra options</item>
        <item>\u2022 Paste a post link into the search bar to try and load the image in that post</item>
        <item>\u2022 Add the refresh widget to your home screen to quickly change to another favorite wallpaper</item>
        <item>\u2022 Make sure to grant the storage permission in settings to download images</item>
    </string-array>
    <string name="appwidget_text">Refresh Wallpaper</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This widget will refresh the wallpaper if clicked</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>