<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home_screen"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites_screen"
        android:icon="@drawable/ic_favorite_filled"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_saved"
        android:title="Saved" />

    <item
        android:id="@+id/navigation_settings_compose"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>